--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+﻿<html>
 
 <style>
   body {
@@ -104,8 +104,8 @@
           onMouseOver="NightKing.innerHTML='9.00 FW  Stand Menu'" ;
           onmouseout="NightKing.innerHTML='Stand - PS4 MAIN MENU'" type="button"><B> 9.00 FW Exploit Menu </B></button></a>
 	  <a href="900jb/index.html"><button style='font-size:20px;text-align:center;color:#4863A0;width: 490px;' class="pointer"
-          onMouseOver="NightKing.innerHTML='9.00 FW  Auto Exploit + GoldHen v2.1.1 [ Besoin Clé USB ]'" ;
-          onmouseout="NightKing.innerHTML='Stand - PS4 MAIN MENU'" type="button"><B> 9.00 FW Auto Kernel Exploit + GoldHen v2.1.1 </B></button></a>
+          onMouseOver="NightKing.innerHTML='9.00 FW  Auto Exploit + GoldHen v2.1.2 [ Besoin Clé USB ]'" ;
+          onmouseout="NightKing.innerHTML='Stand - PS4 MAIN MENU'" type="button"><B> 9.00 FW Auto Kernel Exploit + GoldHen v2.1.2 </B></button></a>
 	 <br><br>
 
     </div>
