--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+﻿<html>
 
 <style>
   body {
@@ -28,7 +28,10 @@
     border-radius: 10px;
   }
 </style>
-
+<head>
+  <meta charset="utf-8">
+  <title>Stand Exploit For PS4 Console - 9.00 Firmwares</title>
+  <link rel="stylesheet prefetch" href="Style.css">
 
 
 <head>
@@ -97,15 +100,15 @@
     </script>
     <div style="text-align:center" id="MyItems">
       <br>
-      <h1 id=NightKing style='font-size:30px;text-align:center;text-shadow: 4px 4px 4px black;color:yellow'>Stand - PS4 MAIN MENU</h1>
+      <h1 id=Stand style='font-size:30px;text-align:center;text-shadow: 4px 4px 4px black;color:yellow'>Stand - PS4 MAIN MENU</h1>
       <br>
            <div style=font-size:25px;text-align:center;color:yellow;>9.00 Firmware Host Exploit Menu For PS4 Web Browser</div>
 	  <a href="900/index.html"><button style='font-size:20px;text-align:center;color:#4863A0;width: 280px;' class="pointer"
           onMouseOver="NightKing.innerHTML='9.00 FW  Stand Menu'" ;
           onmouseout="NightKing.innerHTML='Stand - PS4 MAIN MENU'" type="button"><B> 9.00 FW Exploit Menu </B></button></a>
 	  <a href="900jb/index.html"><button style='font-size:20px;text-align:center;color:#4863A0;width: 490px;' class="pointer"
-          onMouseOver="NightKing.innerHTML='9.00 FW  Auto Exploit + GoldHen v2.1.2 [ Besoin Clé USB ]'" ;
-          onmouseout="NightKing.innerHTML='Stand - PS4 MAIN MENU'" type="button"><B> 9.00 FW Auto Kernel Exploit + GoldHen v2.1.2 </B></button></a>
+          onMouseOver="NightKing.innerHTML='9.00 FW  Auto Exploit + GoldHen v2.2 [ Besoin Clé USB ]'" ;
+          onmouseout="NightKing.innerHTML='Stand - PS4 MAIN MENU'" type="button"><B> 9.00 FW Auto Kernel Exploit + GoldHen v2.2 </B></button></a>
 	 <br><br>
 
     </div>
