--- a/900jb/index.html
+++ b/900jb/index.html
@@ -1,5 +1,4 @@
-<head>
-    <title>PS4 - Stand 9.00 FW  Auto Exploit + Gold Hen 2.2.2</title>
+    <title>PS4 - Stand 9.00 FW  Auto Exploit + Gold Hen 2.3b2</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         body {
@@ -67,7 +66,6 @@
     <script src="kexploit.js"></script>
     <script src="webkit.js"></script>
 </head>
-
 
 <body onload="setTimeout(poc, 1500);">
 
