--- a/900jb/index.html
+++ b/900jb/index.html
@@ -1,4 +1,5 @@
-    <title>PS4 - Stand 9.00 FW  Auto Exploit + Gold Hen 2.3b2</title>
+<head>
+    <title>PS4 - Stand 9.00 FW  Auto Exploit + GoldHen v2.2.3</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         body {
@@ -66,6 +67,8 @@
     <script src="kexploit.js"></script>
     <script src="webkit.js"></script>
 </head>
+
+</html>
 
 <body onload="setTimeout(poc, 1500);">
 
