--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           onmouseout="NightKing.innerHTML='Stand - PS4 MAIN MENU'" type="button"><B> 9.00 FW Exploit Menu </B></button></a>
 	  <a href="900jb/index.html"><button style='font-size:20px;text-align:center;color:#4863A0;width: 490px;' class="pointer"
           onMouseOver="NightKing.innerHTML='9.00 FW  Auto Exploit + GoldHen v2.2.3 [ Besoin Clé USB ]'" ;
-          onmouseout="NightKing.innerHTML='Stand - PS4 MAIN MENU'" type="button"><B> 9.00 FW Auto Kernel Exploit + GoldHen v2.3B2 </B></button></a>
+          onmouseout="NightKing.innerHTML='Stand - PS4 MAIN MENU'" type="button"><B> 9.00 FW Auto Kernel Exploit + GoldHen v2.2.3 </B></button></a>
 	 <br><br>
 
     </div>
