--- a/index.html
+++ b/index.html
@@ -110,7 +110,9 @@
 	  <a href="900jb/index.html"><button style='font-size:20px;text-align:center;color:#4863A0;width: 490px;' class="pointer"
           onMouseOver="NightKing.innerHTML='9.00 FW  Auto Exploit + GoldHen v2.2.4 [ Besoin Clé USB ]'" ;
           onmouseout="NightKing.innerHTML='Stand - PS4 MAIN MENU'" type="button"><B> 9.00 FW Auto Kernel Exploit + GoldHen v2.2.4 </B></button></a>
-	 <br><br>
+	  onmouseout="NightKing.innerHTML='Stand - PS4 MAIN MENU'" type="button"><B> 5.05 FW Exploit Menu </B></button></a>
+	  <a href="505/index.html"><button style='font-size:20px;text-align:center;color:#4863A0;width: 490px;' class="pointer"
+	  <br><br>
 
     </div>
     <script>
