--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       </div>
     </div>
     <hr><span id="date"></span><span id="clock"></span>
-    <h1 style='font-size:25px;text-align:center;color:white;'>Stand Exploit For PS4 Console - 9.00 Firmwares&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h1>
+    <h1 style='font-size:25px;text-align:center;color:white;'>Stand Exploit For PS4 Console - 9.00 & 5.05 Firmwares&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h1>
     <hr>
       <div id="myModal" class="modal">
       <!-- MODAL CONTENTS -->
@@ -103,7 +103,7 @@
       <br>
       <h1 id=Stand style='font-size:30px;text-align:center;text-shadow: 4px 4px 4px black;color:yellow'>Stand - PS4 MAIN MENU</h1>
       <br>
-           <div style=font-size:25px;text-align:center;color:yellow;>9.00 Firmware Host Exploit Menu For PS4 Web Browser</div>
+           <div style=font-size:25px;text-align:center;color:yellow;>9.00 & 5.05 Firmware Host Exploit Menu For PS4 Web Browser</div>
 	  <a href="900/index.html"><button style='font-size:20px;text-align:center;color:#4863A0;width: 280px;' class="pointer"
           onMouseOver="NightKing.innerHTML='9.00 FW  Stand Menu'" ;
           onmouseout="NightKing.innerHTML='Stand - PS4 MAIN MENU'" type="button"><B> 9.00 FW Exploit Menu </B></button></a>
