--- a/index.html
+++ b/index.html
@@ -105,14 +105,14 @@
       <br>
            <div style=font-size:25px;text-align:center;color:yellow;>9.00 & 5.05 Firmware Host Exploit Menu For PS4 Web Browser</div>
 	  <a href="900/index.html"><button style='font-size:20px;text-align:center;color:#4863A0;width: 280px;' class="pointer"
-          onMouseOver="NightKing.innerHTML='9.00 FW  Stand Menu'" ;
-          onmouseout="NightKing.innerHTML='Stand - PS4 MAIN MENU'" type="button"><B> 9.00 FW Exploit Menu </B></button></a>
-	  <a href="900jb/index.html"><button style='font-size:20px;text-align:center;color:#4863A0;width: 500px;' class="pointer"
-          onMouseOver="NightKing.innerHTML='9.00 FW  Auto Exploit + GoldHen v2.2.5B2 [ Besoin Clé USB ]'" ;
-          onmouseout="NightKing.innerHTML='Stand - PS4 MAIN MENU'" type="button"><B> 9.00 FW Auto Kernel Exploit + GoldHen v2.2.5B2 </B></button></a>
+          onMouseOver="NightKing.innerHTML='9.00 Stand Menu'" ;
+          onmouseout="NightKing.innerHTML='Stand - PS4 MAIN MENU'" type="button"><B> 9.00 Exploit Menu </B></button></a>
+	  <a href="900jb/index.html"><button style='font-size:20px;text-align:center;color:#4863A0;width: 490px;' class="pointer"
+          onMouseOver="NightKing.innerHTML='9.00 Auto Exploit + GoldHen v2.2.5B2 [ Besoin Clé USB ]'" ;
+          onmouseout="NightKing.innerHTML='Stand - PS4 MAIN MENU'" type="button"><B> 9.00 Auto Kernel Exploit + GoldHen v2.2.5B2 </B></button></a>
 	  <a href="505/index.html"><button style='font-size:20px;text-align:center;color:#4863A0;width: 280px;' class="pointer"
-          onMouseOver="NightKing.innerHTML='5.05 FW  Stand Menu'" ;
-          onmouseout="NightKing.innerHTML='Stand - PS4 MAIN MENU'" type="button"><B> 5.05 FW Exploit Menu </B></button></a>	
+          onMouseOver="NightKing.innerHTML='5.05 Stand Menu'" ;
+          onmouseout="NightKing.innerHTML='Stand - PS4 MAIN MENU'" type="button"><B> 5.05 Exploit Menu </B></button></a>	
 	  <br><br>
 
     </div>
