--- a/900jb/index.html
+++ b/900jb/index.html
@@ -78,7 +78,7 @@
     </div>
 
     <div id="allset" class="info" style="display:none;">
-        You're all set!
+        Injection Réussi!
     </div>
 
 </body>
