--- a/index.html
+++ b/index.html
@@ -112,7 +112,10 @@
           onmouseout="NightKing.innerHTML='Stand - PS4 MAIN MENU'" type="button"><B> 9.00 Auto Kernel Exploit + GoldHen v2.2.5B2 </B></button></a>
 	  <a href="505/index.html"><button style='font-size:20px;text-align:center;color:#4863A0;width: 280px;' class="pointer"
           onMouseOver="NightKing.innerHTML='5.05 Stand Menu'" ;
-          onmouseout="NightKing.innerHTML='Stand - PS4 MAIN MENU'" type="button"><B> 5.05 Exploit Menu </B></button></a>	
+          onmouseout="NightKing.innerHTML='Stand - PS4 MAIN MENU'" type="button"><B> 5.05 Exploit Menu </B></button></a>
+	  <a href="activator/index.html"><button style='font-size:20px;text-align:center;color:#4863A0;width: 280px;' class="pointer"
+          onMouseOver="NightKing.innerHTML='Activator Menu'" ;
+          onmouseout="NightKing.innerHTML='Stand - PS4 MAIN MENU'" type="button"><B> Activator Menu </B></button></a>	
 	  <br><br>
 
     </div>
