--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 	  <a href="505/index.html"><button style='font-size:20px;text-align:center;color:#4863A0;width: 280px;' class="pointer"
           onMouseOver="NightKing.innerHTML='5.05 Stand Menu'" ;
           onmouseout="NightKing.innerHTML='Stand - PS4 MAIN MENU'" type="button"><B> 5.05 Exploit Menu </B></button></a>
-	  <a href="activator/index.html"><button style='font-size:20px;text-align:center;color:#4863A0;width: 280px;' class="pointer"
+	  <a href="https://sleirsgoevy.github.io/ps4-web-activator/"><button style='font-size:20px;text-align:center;color:#4863A0;width: 280px;' class="pointer"
           onMouseOver="NightKing.innerHTML='Activator Menu'" ;
           onmouseout="NightKing.innerHTML='Stand - PS4 MAIN MENU'" type="button"><B> Activator Menu </B></button></a>	
 	  <br><br>
