--- a/index.html
+++ b/index.html
@@ -117,6 +117,10 @@
           onMouseOver="NightKing.innerHTML='Activator Menu'" ;
           onmouseout="NightKing.innerHTML='Stand - PS4 MAIN MENU'" type="button"><B> Activator Menu </B></button></a>	
 	  <br><br>
+	  <a href="ESP32Updater/index.html"><button style='font-size:20px;text-align:center;color:#4863A0;width: 280px;' class="pointer"
+          onMouseOver="NightKing.innerHTML='ESP32Updater'" ;
+          onmouseout="NightKing.innerHTML='Stand - PS4 MAIN MENU'" type="button"><B> ESP32Updater </B></button></a>	
+	  <br><br>
 
     </div>
     <script>
